@@ -36,7 +36,7 @@
 
 -(id) init
 {
-	if( ![super init] )
+	if( !(self=[super init]) )
 		return nil;
 	
 	target = nil;
