@@ -27,7 +27,7 @@
 @implementation Camera
 -(id) init
 {
-	if( ! [super init] )
+	if( !(self=[super init]) )
 		return nil;
 
 	[self restore];
