@@ -56,7 +56,7 @@
 
 -(id) initWithDuration:(float)t radius:(float)r deltaRadius:(float) dr angleZ:(float)z deltaAngleZ:(float)dz angleX:(float)x deltaAngleX:(float)dx
 {
-	if(! [super initWithDuration:t])
+	if(!(self=[super initWithDuration:t]) )
 		return nil;
 	
 	radius = r;
